# sfml-tiny-lib

./: CMakeLists.txt  build.ps1  build.sh  run.ps1  run.sh  todo.txt
inc/: Animation.hpp  AutoSprite.hpp  AutoSpriteMulti.hpp  ExpSprite.hpp  FPSManager.hpp  ImageTexture.hpp  KeyManager.hpp  Object.hpp  ScrManager.hpp  SpriteAtlas.hpp  SpriteTexture.hpp  SpriteTextureMulti.hpp  Terrain.hpp  common.hpp  tmp.hpp
inc/Object/: BackGround.hpp
inc/dev/: Program.hpp
inc/dev/object/: BackGround.hpp  Background.hpp  Hearable.hpp  Object.hpp  Sculpture.hpp
inc/lib/: Animation.hpp  AutoSprite.hpp  FPSManager.hpp  KeyManager.hpp  MouseManager.hpp  SpriteAtlas.hpp  SpriteGenerator.hpp  WrapImage.hpp  WrapSoundBuffer.hpp  WrapTexture.hpp
include/: common.h
include/dev/: Program.h  Program.hpp
include/dev/object/: Collidable.h  Collidable.hpp  Hearable.h  Object.h  Visible.h  Visible.hpp
include/lib/: Animation.h  FPSManager.h  KeyManager.h  MouseManager.h  MouseManager.hpp  SpriteGenerator.h  SpriteGenerator.hpp  WrapImage.h  WrapImage.hpp  WrapSoundBuffer.h  WrapSoundBuffer.hpp  WrapTexture.h  WrapTexture.hpp
source/: main.cc
source/dev/: Program.cc  Program.cpp
source/lib/: Animation.cc  FPSManager.cc  KeyManager.cc  KeyManager.cpp  MouseManager.cc  SpriteGenerator.cc  WrapImage.cc  WrapSoundBuffer.cc  WrapTexture.cc  WrapTexture.cpp
src/: main.cpp
src/dev/: Program.cpp
src/lib/: Animation.cpp  AutoSprite.cpp  FPSManager.cpp  KeyManager.cpp  MouseManager.cpp  SpriteAtlas.cpp  SpriteGenerator.cpp  WrapImage.cpp  WrapSoundBuffer.cpp  WrapTexture.cpp
(+10 files in other folders)
